--- a/index.html
+++ b/index.html
@@ -15,26 +15,30 @@
     </div>
     <section class="profile">
         <div class="profiles">
-            <img src="Netflix-avatar.png">
+            <img src="./assets/Netflix-avatar.png">
             <h3>anderson</h3>
         </div>
         <div class="profiles">
-            <img src="Netflix-avatar.png">
+            <img src="./assets/Netflix-avatar.png">
             <h3>anderson</h3>
         </div>
         <div class="profiles">
-            <img src="Netflix-avatar.png">
+            <img src="./assets/Netflix-avatar.png">
             <h3>anderson</h3>
         </div>
         <div class="profiles">
-            <img src="Netflix-avatar.png">
+            <img src="./assets/Netflix-avatar.png">
             <h3>anderson</h3>
         </div>
         <div class="profiles">
-            <img src="Netflix-avatar.png">
+            <img src="./assets/Netflix-avatar.png">
             <h3>anderson</h3>
         </div>
     </section>
+    
+    <div class="perfis">
+        <h2>Gerenciar perfis</h2>
+    </div>
 
 </body>
 
