--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="text">
-        <h2>Quem está assistindo?</h2>
+        <h2>Quem está assistindo? ah, por favor.</h2>
     </div>
     <section class="profile">
         <div class="profiles">
